Update Java dynamic loader Clean up some error handlers